# gateway

./: .bump.toml  .gitignore  AGENTS.md  CHANGELOG.md  CHAOS-TEST.md  CLAUDE.md  Dockerfile.operator  Dockerfile.sidecar  INSTALL.md  LICENSE  Makefile  PLAN.md  PLAN2.md  README.md  STATUS.md  TODO.md  VCP-notes.md  VCP.md  codecov.yml  go.mod  go.sum  k8s-dev-howto.md  mkdocs.yml  requirements-docs.txt  user-VCL-deployment.md
ghost/: API.md  CLAUDE.md  Cargo.toml  DEBUG_MODE_LIMITATIONS.md  Dockerfile  README.md  build.rs  feedback.md  ghost-vmod.md
ghost/.cargo/: config.toml
ghost/c_code/: test_stubs.c
ghost/patches/varnish-sys-0.6.0/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md  bindings.for-docs  build.rs
ghost/patches/varnish-sys-0.6.0/c_code/: wrapper.h
ghost/patches/varnish-sys-0.6.0/src/: extensions.rs  lib.rs  txt.rs  validate.rs
ghost/patches/varnish-sys-0.6.0/src/vcl/: convert.rs  ctx.rs  error.rs  http.rs  mod.rs  processor.rs  str_or_bytes.rs  (+2 more)
ghost/src/: backend_pool.rs  config.rs  director.rs  external_backend.rs  format.rs  internal_error_backend.rs  lib.rs  not_found_backend.rs  redirect_backend.rs  response.rs  routing.rs  runtime.rs  stats.rs  sync_wrapper.rs  vhost_director.rs
ghost/tests/: test01.vtc  test_404.vtc  test_backend_cleanup.vtc  test_backend_list.vtc  test_cached_error_race.vtc  test_canary_deployment.vtc  test_debug_log.sh  test_empty_config.vtc  test_external_proxy.vtc  test_ipv6.vtc  test_method_priority.vtc  test_path_matching.vtc  test_pathprefix_bug.vtc  test_reload_error.vtc  test_request_coalescing.vtc  test_request_redirect.vtc  test_url_nofilter.vtc  test_url_rewrite.vtc  test_url_rewrite_failfast.vtc  test_url_rewrite_logged.vtc  test_vcl_discard.vtc  test_vhost_no_routes.vtc
(+265 files in other folders)
