[package]
name = "vmod-ghost"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Varnish vmod for Gateway API routing"

[lib]
crate-type = ["cdylib"]

[dependencies]
varnish = { version = "0.5.5", features = ["ffi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
rand = "0.8"

# Async HTTP client with connection pooling
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "sync"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.0"
