[package]
name = "vmod-ghost"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Varnish vmod for Gateway API routing"

[lib]
crate-type = ["cdylib"]

[dependencies]
varnish = { git = "https://github.com/perbu/varnish-rs", features = ["ffi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
rand = "0.8"
regex = "1.10"

[dev-dependencies]
tempfile = "3.0"
