[package]
name = "vmod_ghost"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Varnish vmod for Gateway API routing"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
varnish = { git = "https://github.com/perbu/varnish-rs-fork", branch = "backends_per", features = ["ffi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
arc-swap = "1.7"
rand = "0.8"
regex = "1.10"
time = { version = "0.3", features = ["formatting", "parsing"] }

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3.0"
